--------------------------------------------------------------------------------------------------
Release notes version 1.9.7_beta : Enhancements, modifications and corrected bugs since version 1.9.6 :
--------------------------------------------------------------------------------------------------
26/08/25 (TRUST) Fix          : Turbulent viscosity computed in Mixing Length (l_melange) model in Multiphase was not correctly computed.
31/07/25 (TRUST) Fix          : Shear rate was not correctly computed in Multiphase VDF calculation with at least two phases
28/07/25 (TRUST) Portability  : cmake 3.26.0 or newer is necessary to install petsc 3.23.2 and so TRUST.
28/07/25 (TRUST) Library      : Update PETSc 3.22.4 to 3.23.2 for GNU 15.x support, Cuda 12.8 support, GPU fixes
28/07/25 (TRUST) Fix          : Extraire_plan on large mesh could introduce severe slowdown every time-step
28/07/25 (TRUST) Option       : Expert_only option depecated for the VerifierCoin keyword
28/07/25 (TRUST) Memory       : Reduce 5-10% memory footprint when using muscl/upwind schemes in VEF 3D
28/07/25 (TRUST) Fix          : Possible KSP divergence on multi-node Nvidia GPU with MPI Cuda-aware
28/07/25 (TRUST) GPU          : Support of old Turing cards (T1000)
28/07/25 (TRUST) GPU          : First implicit scheme (Implicite) in VEF available on GPU (with muscl/ef_stab/upwind schemes and diffusive term)
28/07/25 (TRUST) GPU          : More Quasi-compressible features accelerated in VEF
28/07/25 (TRUST) GPU          : Lot of kernel optimizations in VEF (muscl/upwind schemes, diffusion term and semi-implicit scheme)
28/07/25 (TRUST) Change       : When diffusion is implicited on a flow with null velocity initial condition, first time step is based on diffusive time step not dt_max
28/07/25 (TRUST) Fix          : Large slowdown on GPU when Extraire_plan was used to create a 2D domain for lightweight postprocessing