@@ -810,14 +810,15 @@
     "tmp=visit.export_lata_base(\"coarse/diffusion.lata\",\"Pseudocolor\",\"ERREUR_T_ELEM_dom\",\"coarse\")\n",
     "tmp.maximum()  \n",
     "\n",
-    "MaxFine   =plot.loadText(\"Maxfine\"   )\n",
-    "MaxCoarse =plot.loadText(\"Maxcoarse\")\n",
+    "if not visit.VisItDisabled():\n",
+    "    MaxFine   =plot.loadText(\"Maxfine\"   )\n",
+    "    MaxCoarse =plot.loadText(\"Maxcoarse\")\n",
     "\n",
-    "columns=[\"Max Error\"]\n",
-    "t=plot.Table(columns)      \n",
-    "t.addLine([[MaxFine]],\"fine\")    \n",
-    "t.addLine([[MaxCoarse]],\"coarse\")    \n",
-    "display(t)"
+    "    columns=[\"Max Error\"]\n",
+    "    t=plot.Table(columns)\n",
+    "    t.addLine([[MaxFine]],\"fine\")\n",
+    "    t.addLine([[MaxCoarse]],\"coarse\")\n",
+    "    display(t)"
    ]
   },
   {
